# experiment-wasm-runtime

./: Cargo.toml  README.md
.run/runConfigurations/: Build.run.xml  Clean.run.xml  Run.run.xml
1-compile-rust-to-wasm/: Cargo.toml  README.md
2-embed-wasm-runtime/: Cargo.toml  README.md
2-embed-wasm-runtime/src/: main.rs
3-rust-wasm-library/: Cargo.toml  README.md
3-rust-wasm-library/src/: lib.rs
4-use-host-functionality/: Cargo.toml
4-use-host-functionality/src/: lib.rs
